--- a/plugin.xml
+++ b/plugin.xml
@@ -19,7 +19,8 @@
 
     <preference name="APP_ID" />
     <preference name="APP_NAME" />
-
+	<preference name="ANDROID_SDK_VERSION" default="4.+"/>
+	
     <engines>
         <!-- Requires > 3.5.0 because of the custom Framework tag for iOS [CB-6698] -->
         <!-- Requires > 4.0.0 because of the Framework tag for Android that uses gradle -->
